assets/css/ztake.css
body {
    font-family: 'Montserrat',-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

.navbar-brand {
    font-weight: 700;
    letter-spacing: .4px;
    font-size: 22px;
    line-height: 38px
}

header#header .navbar-brand {
    color: #3f3cd8;
}

header#header .navbar-nav li+li {
    margin-left: 1.5rem;
}

header#header .navbar-nav .nav-link {
    font-weight: 600;
    letter-spacing: .3px;
    color: #1d0055;
    padding: 14px 0;
    position: relative;
}

header#header .navbar-nav li.active .nav-link:after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 3px;
    background-color: #3f3cd8;
    border-radius: 1.5px;
}

.btn.focus, .btn:focus, .btn:not(:disabled):not(.disabled).active:focus, .btn:not(:disabled):not(.disabled):active:focus {
    box-shadow: none;
}

body > section {
    padding: 80px 0;
}

section#intro h1 {
    font-size: 45px;
    font-weight: 500;
    line-height: 1.33;
    letter-spacing: .9px;
    color: #1d0055;
    margin-bottom: 41px;
}

section#intro h2{
    font-size: 20px;
    font-weight: 700;
    line-height: 2;
    letter-spacing: .4px;
    color: #1d0055;
    margin-bottom: 30px;
    max-width: 310px;
}

section#intro p{
    margin-bottom: 63px;
    max-width: 480px;
}

section h3 {
    font-size: 35px;
    font-weight: 700;
    letter-spacing: .7px;
    color: #1d0055;
    margin-bottom: 50px;
}

section p{
    font-size: 14px;
    line-height: 2.14;
    color: #4b5378;
}

section p + p {
    margin-top: 30px;
    margin-bottom: 30px;
}
.btn-lg {
    padding: 16px 32px;
    font-size: 18px;
    line-height: 1.5;
    border-radius: 30px;
    letter-spacing: .4px;
    font-weight: 700;
}

.btn-primary {
    border-color: #3f3cd8;
    background-color: #3f3cd8;
}

.btn-primary:hover {
    border-color: #3f3cd8;
    background-color: #3f3cd8;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active {
    border-color: #3f3cd8;
    background-color: #3f3cd8;
}

section#portfolio .card {
    padding: 30px;
    -ms-flex-direction: row;
    flex-direction: row;
    -ms-flex-align: center;
    align-items: center;
    border-color: #e9e8f4;
    border-radius: 10px;
    margin: 15px 0;
}

section#portfolio .card-title {
    font-size: 20px;
    font-weight: bold;
    letter-spacing: .4px;
    color: #1e1c66;
    margin-bottom: 25px;
}

section#portfolio .card-logo {
    width: 108px;
    height: 108px;
    border-radius: 6px;
    background-color: rgba(0, 0, 0, 0.1);
    -ms-flex: 0 0 108px;
    flex: 0 0 108px;
    margin-right: 30px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
}

section#portfolio .card-body {
    padding: 0;
}

section#portfolio .status-h {
    letter-spacing: .3px;
    color: #4b5378;
    margin-bottom: 5px;
}

section#portfolio .status {
    font-size: 18px;
    font-weight: 500;
    letter-spacing: .4px;
    color: #3f3cd8;
}

section#portfolio .btn-card {
    position: absolute;
    right: 0;
    top: 0;
    background-color: #3634ba;
    border-color: #3634ba;
    border-top-right-radius: 10px;
    border-bottom-left-radius: 10px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
    height: 40px;
    width: 40px;
    padding: 0;
}

section#portfolio .card.dark {
    box-shadow: 0 20px 40px 0 rgba(63, 60, 216, 0.15);
    background-color: #3f3cd8;
    border-color: #3f3cd8;
}

section#portfolio .card.dark .card-title, section#portfolio .card.dark .status, section#portfolio .card.dark .card-text {
    color: #fff;
}

section#portfolio .card.dark .card-logo {
    background-color: rgba(255, 255, 255, .1);
}

section#portfolio .card.dark .status-h {
    color: rgba(255, 255, 255, 0.5);
}

section#portfolio .cosmos {
    background-color: #17074e !important;
}

section#portfolio .poa {
    background-color: #5c2fa5 !important;
}

section#portfolio .goerli {
    background-color: #1c1c1c !important;
}

section#portfolio .iris {
    background-color: #131837 !important;
}

section#portfolio .polkadot {
    background-color: #fff !important;
}

div#delegate {
    transition: all 0.2s;
    text-decoration: none;
    background-color: #a2a1ff;
    text-align: center;
    padding: 10px 40px;
    position: relative;
}

div#delegate > a {
    color: #fff;
}

section#reasons p {
    max-width: 285px;
}

section#reasons .col-reason {
    padding-top: 30px;
    padding-bottom: 40px;
}

section#reasons .r-icon {
    height: 90px;
    margin-bottom: 40px;
}

section h4 {
    font-size: 20px;
    font-weight: 700;
    line-height: 2;
    letter-spacing: .4px;
    color: #1d0055;
    margin-bottom: 30px;
}

section#features .row {
    padding-top: 30px;
    padding-bottom: 50px;
}

section#features p {
    max-width: 460px;
}

section#contact form {
    padding: 50px;
    border-radius: 10px;
    box-shadow: -2.1px 29.9px 35px 0 rgba(46, 21, 107, 0.09);
    background-color: #ffffff;
}

@media (min-width: 992px) {
    section#contact .mailbox:before {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        left: -12%;
        width: 100%;
        background-repeat: no-repeat;
        background-size: contain;
        background-image: url("../img/mailbox.svg");
    }
}

.form-control {
    border-radius: 30px;
    color: #4b5378;
    border: solid 1px #e8e9ee;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: .3px;
    height: 60px;
    padding: 18px 30px;
}

.input-group-text {
    background-color: #fff;
    border-radius: 30px;
    color: #4b5378;
    border: solid 1px #e8e9ee;
    font-size: 14px;
    padding: 18px 20px 18px 30px;
}

.input-group>.form-control:not(:first-child) {
    border-left: 0;
    padding-left: 0;
}

.form-control:focus {
    border-color: #e8e9ee;
    box-shadow: none;
}

section#contact .input-group {
    margin-bottom: 30px;
}

@media (min-width: 992px) {
    section#contact .btn {
        width: 100%;
    }
}

section#contact p {
    max-width: 340px;
}

.icon {
    display: inline-block;
    line-height: 1;
    height: 18px;
    width: 18px;
    background-repeat: no-repeat;
    background-position: center;
}

.icon-message {
    background-image: url("../img/icons/message-icon.svg");
}

.icon-user {
    background-image: url("../img/icons/user-icon.svg");
}

footer#footer {
    background-color: #3f3cd8;
    padding: 10px 0;
}

footer#footer .navbar-brand {
    color: #fff;
    margin-right: 0;
}

footer#footer .based{
    color: #fff;
    font-size: 14px;
    font-weight: 500;
    line-height: 2.86;
    letter-spacing: .3px;
    position: absolute;
    left: 0;
    right: 0;
    text-align: center;
}

footer#footer ul.social {
    position: relative;
    z-index: 20;
}

footer#footer ul.social li {
    margin: 0 8px;
}

footer#footer ul.social a {
    height: 32px;
    width: 32px;
    background-color: #fff;
    border-radius: 16px;
    padding: 0;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
}

.icon-facebook {
    background-image: url("../img/icons/facebook-icon.svg");
}

.icon-github {
    background-image: url("../img/icons/github-icon.svg");
}

.icon-twitter {
    background-image: url("../img/icons/twitter-icon.svg");
}

@media (max-width:991.98px) {
    section#intro {
        text-align: center;
    }

    section#intro h1 {
        font-size: 40px;
        max-width: 500px;
        margin-left: auto;
        margin-right: auto;
    }

    section#intro h2 {
        margin: 0 auto 40px auto;
        max-width: initial;
    }

    section#intro p {
        margin: 0 auto 40px auto;
    }

    section#intro .btn {
        margin-top: 40px;
    }

    section#about {
        text-align: center;
    }

    section h3 {
        text-align: center;
        font-size: 35px;
    }

    section p {
        margin: 0 auto 40px auto;
    }

    section#reasons p {
        margin-left: 0;
    }

    section#features {
        text-align: center;
    }

    section#contact {
        text-align: center;
    }
}

@media (max-width:767.98px) {
    section#intro h1 {
        font-size: 24px;
    }

    section#intro h2 {
        font-size: 16px;
    }

    .btn-lg {
        padding: 10px 18px;
        font-size: 16px;
    }

    section h3 {
        font-size: 20px;
    }

    section#portfolio .card-title {
        font-size: 16px;
    }

    section#portfolio .card-status {
        font-size: 14px;
    }

    section#portfolio .status {
        font-size: 15px;
    }

    section h4 {
        font-size: 18px;
    }

    section#reasons {
        text-align: center;
    }

    footer#footer .based {
        position: relative;
    }
}

